--- a/views/user/register.ejs
+++ b/views/user/register.ejs
@@ -1,5 +1,52 @@
 <%- include("../layouts/head",{type:'register'}) %>
-	<div class="container">
+		<div id="login">
+<div class="wrapper">
+<div class="login">
+<form method="post" class="form container offset1 loginform">
+	<div id="owl-login">
+	<div class="hand"></div>
+	<div class="hand hand-r"></div>
+	<div class="arms">
+	<div class="arm"></div>
+	<div class="arm arm-r"></div>
+	</div>
+	</div>
+	<div class="pad">
+	<!-- <input type="hidden" name="_csrf" value="9IAtUxV2CatyxHiK2LxzOsT6wtBE6h8BpzOmk="> -->
+	<div class="control-group">
+	<div class="controls">
+	<label for="name" class="control-label fa fa-user"></label>
+	<input id="name" type="text" name="name" placeholder="Username" tabindex="1" autofocus="autofocus" class="form-control input-medium">
+	</div>
+	</div>
+	<div class="control-group">
+	<div class="controls">
+	<label for="password" class="control-label fa fa-asterisk"></label>
+	<input id="password" type="password" name="secret" placeholder="Secret Key" tabindex="2" class="form-control input-medium">
+	</div>
+	</div>
+	</div>
+	<div class="form-actions">
+	<div tabindex="4" class="btn btn-primary login-btn">register</div>
+	</div>
+</form>
+</div>
+</div>
+<script>
+    $(function() {
+
+        $('#login #password').focus(function() {
+            $('#owl-login').addClass('password');
+        }).blur(function() {
+            $('#owl-login').removeClass('password');
+        });
+    });
+    </script>
+</div>
+
+
+
+	<!-- <div class="container">
 		<form class="form create" method="post">
 			<div>
 				<label>Name：</label>
@@ -11,26 +58,26 @@
 			</div>
 			<div class="submit">注册</div>
 		</form>
-	</div>
+	</div> -->
 	<script>
 		$(window).keyup(function (e) {
 			if (e.keyCode == 13) {
-				$('.submit').click()
+				$('.login-btn').click()
 			}
 		})
-		$('.submit').click(()=>{
-			if ($('input[name=name]').val().trim() == '') {
-				fade('请输入用户名！')
+		$('.login-btn').click(()=>{
+			if ($.trim($('input[name=name]').val())/*.trim()*/ == '') {
+				fade('请输入公钥！')
 			} else if ($('input[name=name]').val().match(/[<'">]/g)) {
 				fade('请输入合法字符！')
-			} else if ($('textarea[name=secret]').val().trim() == '') {
-				fade('请输入Stellar地址！')
+			} else if ($.trim($('input[name=secret]').val())/*.trim()*/ == '') {
+				fade('请输入秘钥！')
 			} else {
 				$.ajax({
 					url: "/register",
 					data: {
 						name: $('input[name=name]').val(),
-						secret: $('textarea[name=secret]').val(),
+						secret: $('input[name=secret]').val(),
 					},
 					type: "POST",
 					cache: false,
