--- a/views/channel/channel-details.ejs
+++ b/views/channel/channel-details.ejs
@@ -1,35 +1,35 @@
 <%- include("../layouts/head",{type:'channel'}) %>
-	<h1 style="text-align: center;">通道详情</h1>
+	<h1 style="text-align: center;">Channels</h1>
 	<div class="container">
 		<form class="form create" method="post">
 			<div>
-				通道名称：<%= info.channel_name %>
+				Channel Name：<%= info.channel_name %>
 			</div>
 			<div>
-				通道状态：<%= info.channel_status==1?"打开":"未开启" %>
+				Channel Status：<%= info.channel_status==1?"Open":"Closed" %>
 			</div>
 			<% if(info.channel_status==1) { %>
 				<% if(info.channel_sponsor_id==session.id) { %>
-					<div>我的通道余额：<%= info.channel_sponsor_amount %></div>
-					<div>对方通道余额：<%= info.channel_receive_amount %></div>
+					<div>My Balance：<%= info.channel_sponsor_amount %></div>
+					<div>Counterpart Channel Balance：<%= info.channel_receive_amount %></div>
 				<% } else { %>
-					<div>我的通道余额：<%= info.channel_receive_amount %></div>
-					<div>对方通道余额：<%= info.channel_sponsor_amount %></div>
+					<div>My Balance：<%= info.channel_receive_amount %></div>
+					<div>Counterpart Channel Balance：<%= info.channel_sponsor_amount %></div>
 				<% } %>
-				<div class="close_channel" style="float: initial;">关闭通道</div>
+				<div class="close_channel" style="float: initial;">Close Channel</div>
 				<hr/>
-				<h3>向对方付款</h3>
+				<h3>Pay Counterpart</h3>
 				<div>
-					<label>支付金额：</label>
-					<input placeholder="请输入金额" type="number" min="0" name="amount" />
+					<label>Amount：</label>
+					<input placeholder="Amount" type="number" min="0" name="amount" />
 				</div>
 				<input type="hidden" value="<%= info.channel_id %>" name="channel_id" />
 				<div class="submit">支付</div>
 			<% } else { %>
-				<div class="create_channel">创建新通道</div>
+				<div class="create_channel">Create New Channel</div>
 			<% } %>
 		</form>
-		<h3 style="text-align: center;margin-top: 100px;">通道交易记录</h3>
+		<h3 style="text-align: center;margin-top: 100px;">Channel Transactions</h3>
         <ul class="posts" style="width: 50%;margin: 0 auto;margin-top: 10px;">
 			<% list.forEach (function(res) { %>
 				<%
@@ -42,10 +42,10 @@
 					}
 					switch (res.transaction_type) {
 						case 0:
-							var transaction_type = "账户交易";
+							var transaction_type = "On-chain Tx";
 							break
 						case 1:
-							var transaction_type = "通道交易";
+							var transaction_type = "Channel Tx";
 							break;
 						default :
 							var transaction_type = "异常";
@@ -53,7 +53,7 @@
 				%>
 				<li>
 					<div class="title" style="margin-left: 0px;">
-						对方Name:<%= transaction_name %>
+						Counterpart Name:<%= transaction_name %>
 					</div>
 					<span><%= transaction_type %></span>
 					<span><%= transaction_amount %>XLM</span>
@@ -69,8 +69,8 @@
 			selector: '#page',
 			totalPage: <%= countPage %>,
 			currentPage: 1,
-			prev: '上一页',
-			next: '下一页',
+			prev: 'Previous',
+			next: 'Next',
 			first: true,
 			last: true,
 			showTotalPage: true,
@@ -96,10 +96,10 @@
 							}
 							switch (val.transaction_type) {
 								case 0:
-									var transaction_type = "账户交易";
+									var transaction_type = "On-chain Tx";
 									break
 								case 1:
-									var transaction_type = "通道交易";
+									var transaction_type = "Channel Tx";
 									break;
 								default :
 									var transaction_type = "异常";
@@ -107,7 +107,7 @@
 							$('.posts').append(
 								'<li>'+
 									'<div class="title" style="margin-left: 0px;">'+
-										'对方Name:'+ transaction_name +
+										'Counterpart Name:'+ transaction_name +
 									'</div>'+
 									'<span>'+ transaction_type +'</span>&nbsp;'+
 									'<span>'+ transaction_amount +'XLM</span>&nbsp;'+
@@ -116,7 +116,7 @@
 							)
 						})
 					} else {
-						fend('分页不存在')
+						fend('last page')
 					}
 				}
 			})
@@ -138,7 +138,7 @@
 				type: "POST",
 				dataType: 'json',
 				success: function (data) {
-					fade('通道关闭')
+					fade('Channel Closed')
 					setTimeout(function() {
 						location.reload();
 					}, 1000)
@@ -150,7 +150,7 @@
 		})
 		$('.submit').click(()=>{
 			if ($('input[name=amount]').val() <= 0) {
-				fade('请输入正确资金！')
+				fade('Enter Correct Amount')
 				$('input[name=amount]').val("")
 			} else {
 				$.ajax({
@@ -164,7 +164,7 @@
 					dataType: 'json',
 					success: function (data) {
 						if (data.code==200) {
-							fade('支付成功')
+							fade('Operation Successful')
 							var fromid = "<%= session.id %>";
 							var _data = '{"type":"text","fromid":"'+fromid+'","toid":"'+data.toid+'"}';
 							socket.emit('message', _data);
@@ -178,8 +178,8 @@
 					error: function () {
 						fade('异常')
 					}
-				})			
+				})
 			}
-		})		
+		})
 	</script>
 <%- include ../layouts/foot %>
