--- a/views/message/message-list.ejs
+++ b/views/message/message-list.ejs
@@ -1,6 +1,6 @@
 <%- include("../layouts/head",{type:'message'}) %>
 	<h1 style="text-align: center;">
-		消息列表
+		Message List
 	</h1>
 	<div class="container">
 		<ul class="posts">
@@ -11,13 +11,13 @@
 							<%
 								switch (res.message_type) {
 									case 0 :
-										var type = "邀请创建通道";
+										var type = "Invite Open Channel";
 										break;
 									case 1 :
-										var type = "账户交易";
+										var type = "On-chain Tx";
 										break;
 									case 2 :
-										var type = "通道交易";
+										var type = "Channel Tx";
 										break;
 									default:
 										var type = "异常";
@@ -26,8 +26,8 @@
 							<%= type %>
 							<span style="height: 26px;background: <%= res.message_is_read==1?"#5FB878":"red" %>;width: 26px;border-radius: 50%;"></span>
 						</div>
-						<span>来自：<%= res.message_from_user_name %></span>
-						<span>时间：<%= res.message_add_time %></span>
+						<span>From：<%= res.message_from_user_name %></span>
+						<span>Time：<%= res.message_add_time %></span>
 					</a>
 				</li>
 			<% }) %>
@@ -40,8 +40,8 @@
 			selector: '#page',
 			totalPage: <%= countPage %>,
 			currentPage: 1,
-			prev: '上一页',
-			next: '下一页',
+			prev: 'Previous',
+			next: 'Next',
 			first: true,
 			last: true,
 			showTotalPage: true,
@@ -60,18 +60,18 @@
 						$.each(data,function(i,val){
 							var type,
 								status;
-							status = '<span style="height: 26px;background: ' 
+							status = '<span style="height: 26px;background: '
 							status += val.message_is_read==1?"#5FB878":"red"
 							status += ';width: 26px;border-radius: 50%;"></span>';
 							switch (val.message_type) {
 								case 0:
-									type = "邀请创建通道";
+									type = "Invite Open Channel";
 									break;
 								case 1:
-									type = "账户交易";
+									type = "On-chain Tx";
 									break;
 								case 2:
-									type = "通道交易";
+									type = "Channel Tx";
 									break;
 								default:
 									type = "异常";
@@ -82,8 +82,8 @@
 										'<div class="title">'+
 											type + status +
 										'</div>'+
-										'<span>来自：'+ val.message_from_user_name +'</span>'+
-										'<span>时间：'+ val.message_add_time +'</span>'+
+										'<span>From：'+ val.message_from_user_name +'</span>'+
+										'<span>Time：'+ val.message_add_time +'</span>'+
 									'</a>'+
 								'</li>'
 							)
