--- a/views/transaction/create.ejs
+++ b/views/transaction/create.ejs
@@ -1,21 +1,21 @@
 <%- include("../layouts/head",{type:'login'}) %>
-	<h1 style="text-align: center;">申请建立支付通道</h1>
+	<h1 style="text-align: center;">Open payment channel</h1>
 	<div class="container">
 		<form class="form create" method="post ">
 			<div>
-				<label>输入对方Stellar地址：</label> 
+				<label>Counterpart Stellar address：</label>
 				<input type="text" name="stellar_address">
 			</div>
 			<div>
-				<label>输入对方Ip地址：</label> 
+				<label>Counterpart IP address：</label>
 				<input type="text" name="ip_address">
 			</div>
 			<div>
-				<label>输入存入通道金额：<span style="color:gray;font-size:10px">（当前账下余额:<%= balance %>）</span></label>
+				<label>Amount to lock：<span style="color:gray;font-size:10px">（Current Balance:<%= balance %>）</span></label>
 				<input type="text" name="amount">
 			</div>
-			<div class="submit">申请</div>
-		</form>		
+			<div class="submit">Apply</div>
+		</form>
 	</div>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.1/socket.io.js"></script>
@@ -32,7 +32,7 @@
 		$('.submit').click(()=>{
 			socket.emit('send', { text : '1'});
 			if ($('input[name=stellar_address]').val().trim() == '' || $('input[name=ip_address]').val().trim() == '' || $('input[name=amount]').val().trim() == '' ) {
-				fade('请输入stellar地址或ip地址或金额')
+				fade('Please input stellar address')
 			} else {
 				console.log($('.form').serialize())
 				$.ajax({
@@ -43,18 +43,18 @@
 					dataType: 'json',
 					success: function (data) {
 					    if(data.code==200) {
-						    fade('建立申请已发送')
+						    fade('Application Submitted')
 						    window.location.href="/lobby"
 					    } else {
 							$('input').val('')
-						    fade('建立失败')
+						    fade('Channel Failed')
 					    }
 					},
 					error: function () {
 						fade('异常')
 					}
-				})			
+				})
 			}
-		})		
+		})
 	</script>
 <% include ../layouts/foot %>
