--- a/views/wallet/wallet.ejs
+++ b/views/wallet/wallet.ejs
@@ -1,26 +1,26 @@
 <%- include("../layouts/head",{type:'wallet'}) %>
-    <h1 style="text-align: center;">我的钱包</h1>
+    <h1 style="text-align: center;">Stellar Wallet</h1>
 	<div class="container">
 		<form class="form create" method="post">
 			<div>
-				账户余额：<%= account_balance %> XLM
+				Account balance：<%= account_balance %> XLM
 			</div>
 			<div>
-				通道余额：<%= channel_balance %> XLM
+				Channel balance：<%= channel_balance %> XLM
             </div>
-            <h3>使用账户余额转账</h3>
+            <h3>On-chain Tx</h3>
             <div class="wallet-username">
-                <label>对方用户名：</label>
-                <input class="wallet-input-username" placeholder="对方用户名" type="text" name="name" />
+                <label>Counterpart：</label>
+                <input class="wallet-input-username" placeholder="Counterpart" type="text" name="name" />
                 <div class="wallet-contack" data-toggle="modal" data-target="#myModal">
 	                联系人
             	</div>
             </div>
             <div>
-                <label>转账金额：</label>
-                <input placeholder="转账金额" type="number" min="0" name="amount" />
+                <label>Amount：</label>
+                <input placeholder="Amount" type="number" min="0" name="amount" />
             </div>
-			<div class="submit">确定</div>
+			<div class="submit">OK</div>
         </form>
 
         <!-- 联系人 -->
@@ -32,24 +32,21 @@
 							&times;
 						</button>
 						<h4 class="modal-title" id="myModalLabel">
-							
+
 						</h4>
 					</div>
 					<div class="modal-body">
-						联系人列表
+
 						<div class="contack-add-wrap">
 								<table class="table">
 								    <thead>
 									    <tr>
-									        <th>用户名</th>
+									        <th>Username</th>
 									        <th>操作</th>
 									    </tr>
 								    </thead>
-								    <tbody>
-									    <tr>
-									        <td><a href="#">Michael</a></td>
-									        <td><a href="#">选择</a></td>
-									    </tr>
+								    <tbody class="contack-list">
+
 								    </tbody>
 								</table>
 							</div>
@@ -57,15 +54,15 @@
 					<div class="modal-footer">
 						<button type="button" class="btn btn-default" data-dismiss="modal">关闭
 						</button>
-						<button type="button" class="btn btn-primary contack-add">
-							新增
+						<button type="button" class="btn btn-primary contack-manager">
+							管理
 						</button>
 					</div>
 				</div><!-- /.modal-content -->
 			</div><!-- /.modal -->
 		</div>
 
-        <h3 style="text-align: center;margin-top: 100px;">钱包交易记录</h3>
+        <h3 style="text-align: center;margin-top: 100px;">Wallet Tx Histories</h3>
         <ul class="posts" style="width: 50%;margin: 0 auto;margin-top: 10px;">
 			<% list.forEach (function(res) { %>
 				<%
@@ -78,7 +75,7 @@
 					}
 					switch (res.transaction_type) {
 						case 0:
-							var transaction_type = "账户交易";
+							var transaction_type = "On-chain Tx";
 							break
 						default :
 							var transaction_type = "异常";
@@ -86,7 +83,7 @@
 				%>
 				<li>
 					<div class="title" style="margin-left: 0px;font-size: 12px;">
-						用户名: 
+						Username:
 						<%= transaction_name %>
 					</div>
 					<span><%= transaction_type %></span>
@@ -95,7 +92,7 @@
 				</li>
 			<% }) %>
         </ul>
-        <div style="margin-top: 30px" class="pagination" id="page"></div>	
+        <div style="margin-top: 30px" class="pagination" id="page"></div>
 	</div>
 	<script src="/js/pagination.js"></script>
 	<script>
@@ -103,8 +100,8 @@
 			selector: '#page',
 			totalPage: <%= countPage %>,
 			currentPage: 1,
-			prev: '上一页',
-			next: '下一页',
+			prev: 'Previous',
+			next: 'Next',
 			first: true,
 			last: true,
 			showTotalPage: true,
@@ -130,7 +127,7 @@
 							}
 							switch (val.transaction_type) {
 								case 0:
-									var transaction_type = "账户交易";
+									var transaction_type = "On-chain Tx";
 									break
 								default :
 									var transaction_type = "异常";
@@ -138,7 +135,7 @@
 							$('.posts').append(
 								'<li>'+
 									'<div class="title" style="margin-left: 0px;">'+
-										'对方用户名:'+ transaction_name +
+										'Counterpart:'+ transaction_name +
 									'</div>'+
 									'<span>'+ transaction_type +'</span>&nbsp;'+
 									'<span>'+ transaction_amount +'XLM</span>&nbsp;'+
@@ -160,19 +157,50 @@
 
 		// 加载联系人列表
 		$(".wallet-contack").click(function(){
-
+			$('.contack-list').html('')
+			$.ajax({
+				url: "/contack-list",
+				data: {},
+				type: "POST",
+				cache: false,
+				dataType: 'json',
+				success: function (res) {
+					if(!res.error) {
+						list = res.data.list
+						html_str = ''
+						$.each(list, function(i,v){
+							html_str += '' +
+							'<tr data-dismiss="modal" onclick="select_contack(\''+v.user_name+'\')" >' +
+						        '<td>'+v.user_name+'</td>' +
+						        '<td><a href="javascript:;">选择</a></td>' +
+						    '</tr>'
+						})
+						$('.contack-list').append(html_str)
+				   	} else {
+						fade(res.msg)
+				   	}
+				},
+				error: function () {
+					fade('服务器异常')
+				}
+			})
 		})
 
-		// 添加联系人
-		$(".contack-add").click(function(){
-			window.location.href="/contack-add"		
+		// 管理联系人
+		$(".contack-manager").click(function(){
+			window.location.href="/contack-list"
 		})
+
+		// 选择联系人
+		function select_contack(username){
+			$(".wallet-input-username").val(username)
+		}
 
 		$('.submit').click(()=>{
 			if ($('input[name=name]').val().trim() == '') {
-				fade('请输入对方用户名！')
+				fade('Enter Counterpart！')
 			} else if ($('input[name=amount]').val()<=0) {
-				fade('请输入正确金额！')
+				fade('Enter Correct Amount')
 			} else {
 				$.ajax({
 					url: "/wallet",
@@ -186,12 +214,12 @@
 					success: function (data) {
 					   if (data.message == '用户存在') {
 						   $('input').val('')
-						   fade('用户名存在')
-					   } else if(data.message == '转账成功') {
+						   fade('Usernameexisted')
+					   } else if(data.message == 'Operation Successful') {
 							var fromid = "<%= session.id %>";
 							var _data = '{"type":"text","fromid":"'+fromid+'","toid":"'+data.toid+'"}';
 							socket.emit('message', _data);
-							fade('转账成功')
+							fade('Operation Successful')
 							setTimeout(()=>{
 								location.reload();
 							},1000)
@@ -202,8 +230,8 @@
 					error: function () {
 						fade('异常')
 					}
-				})			
+				})
 			}
-		})		
+		})
 	</script>
 <%- include ../layouts/foot %>
